[package]
name = "vorpal"
version = "0.4.3"
edition = "2021"

[lib]
name = "libvorpal"
path = "src/lib.rs"
test = true
doc = true
edition = "2021"
crate-type = ["lib"]
required-features = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
clap-num = "1.0.2"
futures-util = "0.3.29"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json", "stream"] }
scraper = { version = "0.18.1", default-features = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
unicode-segmentation = "1.10.1"


[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
openssl = { version = "0.10.63", features = ["vendored"] }

[target.x86_64-unknown-linux-musl]
linker = "x86_64-unknown-linux-musl-gcc"

[package.metadata.bundle]
name = "Vorpal"
identifier = "com.dekamicchin.vorpal"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.4.1"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Matthew MacGregor Mitchell."
category = "AI"
short_description = "Package manager-like tool to download Civitai Stable Diffusion models/LoRAs by name."
long_description = """
Package manager-like tool to download Civitai models by name. Can be used to query the Civitai via its API and download models directly. The directory can be an environment variable (MODEL_DIRECTORY) or specified via the CLI. Also finds important metadata, such as trigger/activation words for LoRAs, and saves them as a text file.
"""
osx_url_schemes = "com.dekamicchin.vorpal"
